--- a/index.html
+++ b/index.html
@@ -170,10 +170,18 @@
 
         <a href="/4B/index.html" class="project-card">
             <div class="project-title">Stitching image mosaics part 2</div>
-            <img src="./4B/media/harris_patches_overlay.jpg" alt="Face Morphing" class="project-image">
+            <img src="./4B/media/harris_patches_overlay.jpg" alt="Mosaics" class="project-image">
             <div class="project-description">Project 4B: Feature Matching for Autostitching.
             </div>
         </a>
+
+        <a href="/5/index.html" class="project-card">
+            <div class="project-title">Diffusion Models</div>
+            <img src="./5/media/harris_patches_overlay.jpg" alt="Diffusion" class="project-image">
+            <div class="project-description">Project 5: Diffusion Models.
+            </div>
+        </a>
+
     </div>
 
     <!-- Footer -->
