--- a/5/index.html
+++ b/5/index.html
@@ -1225,8 +1225,44 @@
             </div>
         </div>
     </div>
-
-
+    <br>
+    <p class="indented2" style="text-align: center;">
+        <b>"an oil painting of an old man" </b> &rarr; <b>"an oil painting of a snowy mountain village"</b>
+    </p>
+    <div class="image-wrapper indent-level-1">
+        <div class="image-block">
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_rot_5.gif" alt="" width="400">
+            </div>
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_rot_6.gif" alt="" width="400">
+            </div>
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_rot_7.gif" alt="" width="400">
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <h3> Rotating Anagrams</h3>
+     <div class="image-wrapper indent-level-1">
+        <div class="image-block">
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_zoom_1.gif" alt="" width="400">
+            </div>
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_zoom_2.gif" alt="" width="400">
+            </div>
+            <div class="image-item">
+                <div class="image-text" style="font-weight: bold;"></div>
+                <img src="./../5/media/VisAn_zoom_3.gif" alt="" width="400">
+            </div>
+        </div>
+    </div>   
 
 
 
