--- a/5/index.html
+++ b/5/index.html
@@ -982,20 +982,20 @@
         <div class="image-block">
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;">Hybrid Original</div>
-                <img src="./../5/media/blend_1_1.jpg" alt="" width="256">
+                <img src="./../5/media/blend_1_1.jpg" alt="" width="150">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;">Mask</div>
-                <img src="./../5/media/blend_1_2.jpg" alt="" width="256">
+                <img src="./../5/media/blend_1_2.jpg" alt="" width="150">
             </div>
 
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;">Inpainted</div>
-                <img src="./../5/media/inpaint_4_1.gif" alt="" width="256" class="pixelated">
+                <img src="./../5/media/inpaint_4_1.gif" alt="" width="150" class="pixelated">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;">Inpainted hiRes</div>
-                <img src="./../5/media/inpaint4_1_hi.jpg" alt="" width="256">
+                <img src="./../5/media/inpaint4_1_hi.jpg" alt="" width="150">
             </div>
         </div>
     </div>
@@ -1003,20 +1003,20 @@
         <div class="image-block">
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/blend_2_1.jpg" alt="" width="256">
+                <img src="./../5/media/blend_2_1.jpg" alt="" width="150">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/blend_2_2.jpg" alt="" width="256">
+                <img src="./../5/media/blend_2_2.jpg" alt="" width="150">
             </div>
 
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/inpaint_1_2.gif" alt="" width="256" class="pixelated">
+                <img src="./../5/media/inpaint_1_2.gif" alt="" width="150" class="pixelated">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/inpaint1_2_hi.jpg" alt="" width="256">
+                <img src="./../5/media/inpaint1_2_hi.jpg" alt="" width="150">
             </div>
         </div>
     </div>
@@ -1024,20 +1024,20 @@
         <div class="image-block">
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/blend_3_1.jpg" alt="" width="256">
+                <img src="./../5/media/blend_3_1.jpg" alt="" width="150">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/blend_3_2.jpg" alt="" width="256">
+                <img src="./../5/media/blend_3_2.jpg" alt="" width="150">
             </div>
 
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/inpaint_1_3.gif" alt="" width="256" class="pixelated">
+                <img src="./../5/media/inpaint_1_3.gif" alt="" width="150" class="pixelated">
             </div>
             <div class="image-item">
                 <div class="image-text" style="font-weight: bold;"></div>
-                <img src="./../5/media/inpaint1_3_hi.jpg" alt="" width="256">
+                <img src="./../5/media/inpaint1_3_hi.jpg" alt="" width="150">
             </div>
         </div>
     </div>
@@ -1247,18 +1247,21 @@
     </div>
     <br><br>
     <h3> Rotating Anagrams</h3>
+    <p class="indented2" style="text-align: center;">
+        The first text prompt descriptions correspond with the large image, and second prompt corresponds with the small image. 
+    </p>
      <div class="image-wrapper indent-level-1">
         <div class="image-block">
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;"></div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a forest"<br>"lithograph of a penguin"</div>
                 <img src="./../5/media/VisAn_zoom_1.gif" alt="" width="400">
             </div>
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;"></div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a panda"</div>
                 <img src="./../5/media/VisAn_zoom_2.gif" alt="" width="400">
             </div>
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;"></div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a skull"</div>
                 <img src="./../5/media/VisAn_zoom_3.gif" alt="" width="400">
             </div>
         </div>
@@ -1269,12 +1272,12 @@
 
 
 
-    <h2>Part 2 - Bells and Whistles</h2>
+    <h2>Part 2 - Bells and Whistles (WIP section)</h2>
     <ul class="indented">
         <li> Used super resolution</li>
         <li> Animated diffusion steps for gifs</li>
         <li> Animated gifs to better communicate results</li>
-        <li> Did logo for class</li>
+        <li> Did logo for class (WIP) </li>
         <li> I did more examples for outputs like 1.7, 1.8, 1.9</li>
     </ul>
 
