--- a/5/index.html
+++ b/5/index.html
@@ -1246,7 +1246,8 @@
         </div>
     </div>
     <br><br>
-    <h3> Rotating Anagrams</h3>
+    <h2> 1.9 Hybrid Images</h2>
+    <h3> Low / High frequency Anagrams</h3>
     <p class="indented2" style="text-align: center;">
         The first text prompt descriptions correspond with the large image, and second prompt corresponds with the small image. 
     </p>
@@ -1282,12 +1283,12 @@
     </ul>
 
 
-    <h2>Final thoughts</h2>
+    <h2>Final thoughts (Super WIP) </h2>
     <p class=indent>
         I particularly enjoyed feeding the model noise and seeing it hallucinate images. This makes me think of "Do
-        Androids Dream of Electric Sheep?" by Philip K.
+        Androids Dream of Electric Sheep?" by Philip K.<br><br>
 
-        Issues around bias in female gender.
+        Talk about issues around dataset bias towards female gender.
     </p>
     <footer>
         CS 280A - Intro to Computer Vision | Alonso Martinez
