--- a/5/index.html
+++ b/5/index.html
@@ -299,7 +299,10 @@
     <h2>by Alonso Martinez</h2>
     <div class="image-wrapper indent-level-1">
         <div class="image-block">
-            <img src="./media/Livingroom_mosaic.jpg" alt="" width=1500>
+            <img src="./media/VisAn_rot_1.gif" alt="" width=350>
+        </div>
+        <div class="image-block">
+            <img src="./media/VisAn_rot_7.gif" alt="" width=350>
         </div>
     </div>
     <h2>Intro</h2>
@@ -1249,24 +1252,28 @@
     <h2> 1.9 Hybrid Images</h2>
     <h3> Low / High frequency Anagrams</h3>
     <p class="indented2" style="text-align: center;">
-        The first text prompt descriptions correspond with the large image, and second prompt corresponds with the small image. 
+        The first text prompt descriptions correspond with the large image, and second prompt corresponds with the small
+        image.
     </p>
-     <div class="image-wrapper indent-level-1">
+    <div class="image-wrapper indent-level-1">
         <div class="image-block">
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;">"lithograph of a forest"<br>"lithograph of a penguin"</div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a forest"<br>"lithograph of a penguin"
+                </div>
                 <img src="./../5/media/VisAn_zoom_1.gif" alt="" width="400">
             </div>
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a panda"</div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a
+                    panda"</div>
                 <img src="./../5/media/VisAn_zoom_2.gif" alt="" width="400">
             </div>
             <div class="image-item">
-                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a skull"</div>
+                <div class="image-text" style="font-weight: bold;">"lithograph of a waterfall"<br>"lithograph of a
+                    skull"</div>
                 <img src="./../5/media/VisAn_zoom_3.gif" alt="" width="400">
             </div>
         </div>
-    </div>   
+    </div>
 
 
 
