--- a/5/index.html
+++ b/5/index.html
@@ -497,7 +497,7 @@
     </p>
     <br><br>
     <h2>1.4 Iterative Diffusion Denoising</h2>
-    <p class='indented' style="text-align; max-width: 1000px; margin: 0 auto;"> Instead of the single shot
+    <p class='indented' style="text-align: center; max-width: 1000px; margin: 0 auto;"> Instead of the single shot
         approach of predicting noise, we break this up into itertive denoising of the image. My intuition here is that
         this architecture enduces the model to think in terms of coarse to fine detail. <br><br>
 
