--- a/5/index.html
+++ b/5/index.html
@@ -222,6 +222,7 @@
             grid-template-rows: auto 1fr 1fr 1fr;
             gap: 10px;
             width: 800px;
+            max-width: 100%;
             margin: 0 auto;
             padding-bottom: 40px;
         }
@@ -232,6 +233,7 @@
             grid-template-rows: auto 1fr 1fr;
             gap: 10px;
             width: 1200px;
+            max-width: 100%;
             margin: 0 auto;
             padding-bottom: 40px;
         }
@@ -242,6 +244,7 @@
             grid-template-rows: auto 1fr 1fr 1fr;
             gap: 10px;
             width: 1200px;
+            max-width: 100%;
             margin: 0 auto;
             padding-bottom: 40px;
         }
@@ -252,6 +255,7 @@
             grid-template-rows: auto 1fr 1fr;
             gap: 10px;
             width: 1200px;
+            max-width: 100%;
             margin: 0 auto;
             padding-bottom: 40px;
         }
@@ -262,6 +266,7 @@
             grid-template-rows: auto 1fr;
             gap: 10px;
             width: 1200px;
+            max-width: 100%;
             margin: 0 auto;
             padding-bottom: 40px;
         }
@@ -273,6 +278,7 @@
             gap: 10px;
             width: 600px;
             margin: 0 auto;
+            max-width: 100%;
             padding-bottom: 40px;
         }
 
