--- a/5/index.html
+++ b/5/index.html
@@ -6,7 +6,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS 280A - Project 3: Face Morphing and Modelling a Photo Collection | Alonso Martinez</title>
+    <title>CS 280A - Project 5: Diffusion models | Alonso Martinez</title>
     <style>
         body {
             font-family: Arial, sans-serif;
