--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
         <a href="/5/index.html" class="project-card">
             <div class="project-title">Diffusion Models</div>
-            <img src="./5/media/harris_patches_overlay.jpg" alt="Diffusion" class="project-image">
-            <div class="project-description">Project 5: Diffusion Models.
+            <img src="./mainpage_media/proj5.gif" alt="Diffusion" class="project-image">
+            <div class="project-description">Project 5: Fun with Diffusion Models!
             </div>
         </a>
 
