--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
             </div>
         </a>
 
+        <a href="/6/index.html" class="project-card">
+            <div class="project-title">Diffusion Models</div>
+            <img src="./mainpage_media/proj5.gif" alt="Diffusion" class="project-image">
+            <div class="project-description">Project 6: Made ya look!
+            </div>
+        </a>
     </div>
 
     <!-- Footer -->
